--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,12 @@
-<div style="height: 10rem; background-color: #38df81; border-radius: 1rem; margin: 2rem;">
+<div class="Sometimes_Practice_footer">
+    
+    <div class="Sometimes_Practice_footer_button">
+        <span>공지사항</span> |
+        <span>제휴문의</span> |
+        <span>서비스 소개</span>
+    </div>
+    <div style="margin-top: 1rem;">
+        <h6 class="Sometimes_Practice_logo">Sometimes Practice</h6>
+    </div>
 
 </div>
