--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -2,10 +2,30 @@
 
 {% block content %}
 
-    <div style="height: 20rem; background-color: #38df81; border-radius: 1rem; margin: 2rem;">
-        <h1>
-            testing
+    <div style="border-radius: 1rem; margin: 2rem; text-align: center;">
+        <h1 style="font-family: 'Pacifico', cursive;">
+            Hello World LIST!
         </h1>
+
+        <form action="/account/hello_world/" method="POST">
+            {% csrf_token %}
+            <div>
+                <input type="text" name="hello_world_input">
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary">
+            </div>
+        </form>
+        
+        {% if hello_world_list %}
+            {% for hello_world in hello_world_list %}
+            <h4>
+                {{ hello_world_list.text}}
+            </h4>
+            {% endfor %}
+        {% endif %}
+        
+
     </div>
 
 {% endblock %}
